--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "description": "Web stack featuring Alpine.js, Parcel and Tailwind.css",
   "devDependencies": {
-    "alpinejs": "^2.0.1",
+    "alpinejs": "2.0.1",
     "cross-var": "1.1.0",
     "eslint": "6.8.0",
     "eslint-config-standard": "14.1.0",
@@ -16,11 +16,11 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "npm-run-all": "4.1.5",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "1.12.4",
     "posthtml-include": "1.3.3",
     "rimraf": "3.0.2",
     "serve": "11.3.0",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "1.2.0"
   },
   "files": [
     "src"
