--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-standard": "4.0.1",
     "npm-run-all": "4.1.5",
     "parcel-bundler": "1.12.4",
+    "parcel-plugin-purgecss": "2.1.3",
     "posthtml-include": "1.3.3",
     "rimraf": "3.0.2",
     "serve": "11.3.0",
