--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "description": "Web stack featuring Alpine.js, Parcel and Tailwind.css",
   "devDependencies": {
+    "@vanillawc/wc-marquee": "latest",
     "alpinejs": "2.0.1",
     "cross-var": "1.1.0",
     "eslint": "6.8.0",
