use local repo check

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "npm-run-all": "4.1.5",
     "parcel-bundler": "1.12.4",
     "parcel-plugin-purgecss": "2.1.3",
-    "posthtml-include": "1.3.3",
+    "posthtml-include": "1.4.3",
+    "repo-check": "1.9.0",
     "rimraf": "3.0.2",
     "serve": "11.3.0",
     "tailwindcss": "1.2.0"
@@ -39,11 +40,14 @@
   },
   "scripts": {
     "build": "parcel build src/index.html --public-url . --no-source-maps --detailed-report",
+    "check": "repo-check",
     "ci": "npm run test",
     "dev": "run-p watch ",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.html .",
+    "postversion": "git push && git push --tags",
     "prebuild": "rimraf dist/*",
     "prestart": "npm run build",
+    "preversion": "npm run ci",
     "serve": "serve dist --listen 8000 --single",
     "start": "npm run serve",
     "test": "run-s check lint build",
