--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Web stack featuring Alpine.js, Parcel and Tailwind.css",
   "devDependencies": {
     "@vanillawc/wc-marquee": "latest",
-    "alpinejs": "2.3.1",
-    "eslint": "6.8.0",
-    "eslint-config-standard": "14.1.0",
-    "eslint-plugin-html": "6.0.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-node": "11.0.0",
+    "alpinejs": "2.3.3",
+    "eslint": "7.0.0",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-html": "6.0.2",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "npm-run-all": "4.1.5",
@@ -45,10 +45,9 @@
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.html .",
     "postversion": "git push && git push --tags",
     "prebuild": "rimraf dist/*",
-    "prestart": "npm run build",
     "preversion": "npm run ci",
     "serve": "serve dist --listen 8000 --single",
-    "start": "npm run serve",
+    "start": "run-s build serve",
     "test": "run-s check lint build",
     "update": "npx npm-check-updates -u",
     "watch": "parcel src/index.html --port 8000"
