--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@vanillawc/wc-marquee": "latest",
     "alpinejs": "2.3.3",
+    "ava": "3.8.2",
     "eslint": "7.0.0",
     "eslint-config-standard": "14.1.1",
     "eslint-plugin-html": "6.0.2",
@@ -12,7 +13,9 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
+    "esm": "3.2.25",
     "npm-run-all": "4.1.5",
+    "nyc": "15.0.1",
     "parcel-bundler": "1.12.4",
     "posthtml-include": "1.4.3",
     "repo-check": "1.9.0",
@@ -40,7 +43,7 @@
   "scripts": {
     "build": "parcel build src/index.html --public-url . --no-source-maps --detailed-report",
     "check": "repo-check",
-    "ci": "npm run test",
+    "ci": "run-s lint build check test",
     "dev": "run-p watch ",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.html .",
     "postversion": "git push && git push --tags",
@@ -48,7 +51,8 @@
     "preversion": "npm run ci",
     "serve": "serve dist --listen 8000 --single",
     "start": "run-s build serve",
-    "test": "run-s check lint build",
+    "test": "nyc ava",
+    "test:watch": "ava --watch",
     "update": "npx npm-check-updates -u",
     "watch": "parcel src/index.html --port 8000"
   },
