simpler travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,5 @@
 language: node_js
 
-node_js:
-  - 10.16
-
-env: NODE_ENV=production
-
-install: npm install --production=false
-
-addons:
-  apt:
-    packages:
-    - libgconf-2-4
-
-cache:
-  directories:
-    - ~/.npm
-    - ~/.cache
+install: npm ci
 
 script: npm run ci
