--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.2",
+    "eslint-plugin-unicorn": "23.0.0",
     "esm": "3.2.25",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
