--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@vanillawc/wc-marquee": "latest",
     "alpinejs": "2.7.3",
+    "autoprefixer": "10.0.2",
     "ava": "3.13.0",
     "eslint": "7.14.0",
     "eslint-config-standard": "16.0.2",
@@ -17,12 +18,11 @@
     "esm": "3.2.25",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
-    "parcel-bundler": "1.12.4",
+    "parcel": "2.0.0-nightly.457",
     "posthtml-include": "1.6.0",
     "repo-check": "1.12.0",
     "rimraf": "3.0.2",
-    "serve": "11.3.2",
-    "tailwindcss": "1.9.6"
+    "tailwindcss": "2.0.1"
   },
   "files": [
     "src"
@@ -48,10 +48,9 @@
     "dev": "run-p watch",
     "lint": "eslint --fix --ignore-path .gitignore --ext .js,.html .",
     "postversion": "git push && git push --tags",
-    "prebuild": "rimraf dist/*",
+    "prebuild": "rimraf dist/* && rimraf .parcel-cache/*",
     "preversion": "npm run ci",
-    "serve": "serve dist --listen 8000 --single",
-    "start": "run-s build serve",
+    "start": "npm run dev",
     "test": "nyc ava",
     "test:watch": "ava --watch",
     "update": "npx npm-check-updates -u",
